Updated COPPA page

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1577,6 +1577,15 @@
   subgroup: 1
   
 - sbSecId: 5
+  title: COPPA Compliance
+  link: /prebid-server/developers/coppa.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 1
+  
+- sbSecId: 5
   title: Currency Converter
   link: /prebid-server/developers/currency-converter.html
   isLastSubSectionItem: 0
