events dropdown points to new events page

--- a/_data/dropdown_v2.yml
+++ b/_data/dropdown_v2.yml
@@ -65,7 +65,7 @@
     sectionId: 0
     sectionName: Overview
     title: Events
-    link:  /blog
+    link:  /prebid/events.html
     needsDivider: 0
     isHeader: 0
     isSubSectionStart: 0
