Added Xandr logo to partners page

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1,6 +1,6 @@
-- company: AppNexus
-  link: https://www.appnexus.com/en/publishers/header-bidding
-  imgURL: /assets/images/partners/founders/appnexus.png
+- company: Xandr
+  link: https://www.xandr.com/platform/
+  imgURL: /assets/images/partners/founders/xandr.png
   type: founder
   
 - company: Rubicon 
