--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -28,6 +28,11 @@
   imgURL: /assets/images/partners/tech/criteo.png
   type: technology
   
+- company: Datablocks 
+  link: https://datablocks.net/
+  imgURL: /assets/images/partners/tech/datablocks_logo.png
+  type: technology
+  
 - company: Marfeel 
   link: https://www.marfeel.com/
   imgURL: /assets/images/partners/tech/marfeel.png
