--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -27,23 +27,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-
-- sbSecId: 0
-  title: Project Principles
-  link: /principles.html
-  isHeader: 0
-  isSectionHeader: 0
-  sectionTitle:
-  subgroup: 0
-
-- sbSecId: 0
-  title: Contributing
-  link: /contributing/contribute.html
-  isHeader: 0
-  isSectionHeader: 0
-  sectionTitle:
-  subgroup: 0
-
+  
 - sbSecId: 0
   title: About Prebid.org
   link: /overview/what-is-prebid-org.html
@@ -53,16 +37,48 @@
   subgroup: 0
 
 - sbSecId: 0
+  title: Project Principles
+  link: /principles.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 0
+  
+- sbSecId: 0
   title: Members and Partners
   link: /partners/partners.html
   isHeader: 0
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-
+  
 - sbSecId: 0
   title: Prebid Management Committees
   link: /overview/prebid-management-committees.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 0
+  
+- sbSecId: 0
+  title: Developers
+  link: /developers.html
+  isHeader: 0
+  isSectionHeader: 0
+  subgroup: 0
+  
+- sbSecId: 0
+  title: "<span style='color:#EA9622;'>Policies</span>"
+  link: 
+  isHeader: 0
+  isSectionHeader: 0
+  isCatHeader: 1
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 0
+  title: Contributing
+  link: /contributing/contribute.html
   isHeader: 0
   isSectionHeader: 0
   sectionTitle:
@@ -79,13 +95,6 @@
 - sbSecId: 0
   title: Community Code of Conduct
   link: /overview/community-code-of-conduct.html
-  isHeader: 0
-  isSectionHeader: 0
-  subgroup: 0
-
-- sbSecId: 0
-  title: Developers
-  link: /developers.html
   isHeader: 0
   isSectionHeader: 0
   subgroup: 0
@@ -112,6 +121,15 @@
   isHeader: 0
   isSectionHeader: 0
   subgroup: 0
+  
+- sbSecId: 0
+  title: "<span style='color:#EA9622;'>Other</span>"
+  link: 
+  isHeader: 0
+  isSectionHeader: 0
+  isCatHeader: 1
+  sectionTitle: 
+  subgroup: 1
 
 - sbSecId: 0
   title: Managed Services
