--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -209,6 +209,14 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 1
+  
+- sbSecId: 1
+  title: Native Ads
+  link: /dev-docs/examples/native-ad-example.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 1
 
 - sbSecId: 1
   title: Individual Ad Unit Refresh/Infinite Scroll
