--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,9 @@ header:
   #color1: "#080331"
   #color2: "#673051"
   trianglify: false
+  
+# highlights
+highlighter: rouge
 
 # google analytics
 analytics:
