Browsi Viewability Module (#1494)
* Real time data module & browsi Rtd Provider

* removing the RTD core module

* review edits

Covered all of Jean's comments.

* formatting

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -241,7 +241,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-  
+
 - sbSecId: 1
   title: Prebid.js FAQ
   link: /dev-docs/faq.html
@@ -257,7 +257,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-  
+
 - sbSecId: 1
   title: Common Issues
   link: /dev-docs/common-issues.html
@@ -420,7 +420,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 5
-  
+
 - sbSecId: 1
   title: Freewheel Module
   link: /dev-docs/modules/freewheel.html
@@ -428,7 +428,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 5
-  
+
 - sbSecId: 1
   title: Ad Pod Module
   link: /dev-docs/modules/adpod.html
@@ -436,7 +436,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 5
-    
+  
 - sbSecId: 1
   title: Category Translation
   link: /dev-docs/modules/categoryTranslation.html
@@ -444,10 +444,19 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 5
-  
+
 - sbSecId: 1
   title: Konduit Accelerate Module
   link: /dev-docs/modules/konduit.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 5
+
+- sbSecId: 1
+  title: Browsi Viewability Module
+  link: /dev-docs/modules/browsiRtdProvider.html
+  isLastSubSectionItem: 1
   isHeader: 0
   isSectionHeader: 0
   sectionTitle:
@@ -915,7 +924,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-  
+
 - sbSecId: 3
   title: 'Prebid Universal Creative'
   link: /overview/prebid-universal-creative.html
@@ -989,7 +998,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-  
+
 - sbSecId: 3
   title: 'Setting up Long-Form Video'
   link: /adops/setting-up-prebid-ott-video-in-gam.html
@@ -997,7 +1006,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-  
+
 - sbSecId: 3
   title: "<span style='color:#EA9622;'>Freewheel</span>"
   link: 
@@ -1127,7 +1136,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-  
+
 - sbSecId: 4
   title: Getting Started with Long Form Video for Prebid.js
   link: /prebid-video/video-long-form.html
@@ -1144,7 +1153,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-  
+
 - sbSecId: 4
   title: Show OTT Video Ads with Prebid
   link: /dev-docs/show-long-form-video-with-gam.html
@@ -1462,7 +1471,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 1
-  
+
 - sbSecId: 5
   title: Currency Converter
   link: /prebid-server/developers/currency-converter.html
@@ -1470,7 +1479,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 1
-  
+
 - sbSecId: 5
   title: Default Request
   link: /prebid-server/developers/default-request.html
@@ -1543,7 +1552,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-  
+
 - sbSecId: 5
   title: Prebid Server AMP
   link: /prebid-server/endpoints/openrtb2/amp.html
@@ -1551,7 +1560,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-  
+
 - sbSecId: 5
   title: Prebid Server Video
   link: /prebid-server/endpoints/openrtb2/video.html
@@ -1567,7 +1576,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-  
+
 - sbSecId: 5
   title: Get User Syncs
   link: /prebid-server/endpoints/getuids.html
