--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,25 +1,3 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@bszekely1 
-Learn Git and GitHub without any code!
-Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
-
-
-33
-27428prebid/prebid.github.io
- Code Issues 19 Pull requests 15 Projects 0 Wiki Security Insights
-prebid.github.io/_data/sidebar.yml
-@omerBrowsi omerBrowsi Browsi Viewability Module (#1494)
-161c90f 7 hours ago
-@MartianTribe@SSuranie@bretg@omerBrowsi@mike-chowla@jaiminpanchal27@konduit-dev@bszekely1@jeanstemp
-1727 lines (1503 sloc)  31.7 KB
-  
 #--------------Overview--------------|
 
 - sbSecId: 0
@@ -679,15 +657,15 @@ prebid.github.io/_data/sidebar.yml
   subgroup: 1
 
 - sbSecId: 2
-  title: Video Ad Unit
-  link: /prebid-mobile/pbm-api/ios/pbm-videoadunit-ios.html
+  title: Video Outstream Ad Unit
+  link: /prebid-mobile/pbm-api/ios/pbm-videooutstreamadunit-ios.html
   isHeader: 0
   isSectionHeader: 0
   sectionTitle:
   subgroup: 1
 
 - sbSecId: 2
-  title: Video Interstitial Ad Unit
+  title: Video interstitial Ad Unit
   link: /prebid-mobile/pbm-api/ios/pbm-videointerstitialadunit-ios.html
   isHeader: 0
   isSectionHeader: 0
@@ -777,8 +755,8 @@ prebid.github.io/_data/sidebar.yml
   subgroup: 2
 
 - sbSecId: 2
-  title: Video Ad Unit
-  link: /prebid-mobile/pbm-api/android/pbm-videoadunit-android.html
+  title: Video Outstream Ad Unit
+  link: /prebid-mobile/pbm-api/android/pbm-videooutstreamadunit-android.html
   isHeader: 0
   isSectionHeader: 0
   sectionTitle:
@@ -1778,15 +1756,3 @@ prebid.github.io/_data/sidebar.yml
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-© 2019 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
