--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -10,7 +10,6 @@
   subgroup: 1000
   sbCollapseId: overview
 
-
 - sbSecId: 0
   title: General
   link:
@@ -68,6 +67,30 @@
   subgroup: 0
   
 - sbSecId: 0
+  title: "<span style='color:#EA9622;'>Codes of Conduct</span>"
+  link: 
+  isHeader: 0
+  isSectionHeader: 0
+  isCatHeader: 1
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 0
+  title: '&nbsp;&nbsp;Header Bidding Wrapper'
+  link: /wrapper_code_of_conduct.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 0
+
+- sbSecId: 0
+  title: '&nbsp;&nbsp;Community'
+  link: /overview/community-code-of-conduct.html
+  isHeader: 0
+  isSectionHeader: 0
+  subgroup: 0
+  
+- sbSecId: 0
   title: "<span style='color:#EA9622;'>Policies</span>"
   link: 
   isHeader: 0
@@ -77,7 +100,7 @@
   subgroup: 1
   
 - sbSecId: 0
-  title: Contributing
+  title: '&nbsp;&nbsp;Contributing'
   link: /contributing/contribute.html
   isHeader: 0
   isSectionHeader: 0
@@ -85,22 +108,7 @@
   subgroup: 0
 
 - sbSecId: 0
-  title: Header Bidding Wrapper Code of Conduct
-  link: /wrapper_code_of_conduct.html
-  isHeader: 0
-  isSectionHeader: 0
-  sectionTitle:
-  subgroup: 0
-
-- sbSecId: 0
-  title: Community Code of Conduct
-  link: /overview/community-code-of-conduct.html
-  isHeader: 0
-  isSectionHeader: 0
-  subgroup: 0
-
-- sbSecId: 0
-  title: Prebid.org IP Policy
+  title: '&nbsp;&nbsp;Prebid.org IP Policy'
   link: /overview/ip-policy.html
   isHeader: 0
   isSectionHeader: 0
@@ -108,7 +116,7 @@
   subgroup: 0
 
 - sbSecId: 0
-  title: Privacy Policy
+  title: '&nbsp;&nbsp;Privacy Policy'
   link: /privacy.html
   isHeader: 0
   isSectionHeader: 0
@@ -116,7 +124,7 @@
   subgroup: 0
 
 - sbSecId: 0
-  title: Cookies
+  title: '&nbsp;&nbsp;Cookies'
   link: /cookies.html
   isHeader: 0
   isSectionHeader: 0
@@ -132,14 +140,14 @@
   subgroup: 1
 
 - sbSecId: 0
-  title: Managed Services
+  title: '&nbsp;&nbsp;Managed Services'
   link: /prebid/managed.html
   isHeader: 0
   isSectionHeader: 0
   subgroup: 0
   
 - sbSecId: 0
-  title: Events
+  title: '&nbsp;&nbsp;Events'
   link: /prebid/events.html
   isHeader: 0
   isSectionHeader: 0
