Add Chegg logo. Add Chegg to publisher member section. (#1607)
* Add Chegg logo. Add Chegg to publisher member section.

* Put back whitespace.

* alphabetizing pub list

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -63,6 +63,11 @@
   imgURL: /assets/images/partners/publisher/cafemedia.png
   type: publisher
 
+- company: Chegg
+  link: https://www.chegg.com/
+  imgURL: /assets/images/partners/publisher/chegg.png
+  type: publisher
+  
 - company: Mediavine
   link: https://www.mediavine.com/
   imgURL: /assets/images/partners/publisher/mediavine-sq-teal-navy-pn-RGB.png
