Updated menu bar

--- a/_data/dropdown_v2.yml
+++ b/_data/dropdown_v2.yml
@@ -46,7 +46,7 @@
   - subsectionId: 0
     sectionId: 0
     sectionName: Overview
-    title: Members and Partners
+    title: Membership
     link:  /partners/partners.html
     needsDivider: 0
     isHeader: 0
