Updated nav bars

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -53,7 +53,7 @@
   subgroup: 0
 
 - sbSecId: 0
-  title: Members and Partners
+  title: Membership
   link: /partners/partners.html
   isHeader: 0
   isSectionHeader: 0
