added include files for adops processes

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -722,7 +722,6 @@
   sectionTitle:
   subgroup: 1
 
-
 - sbSecId: 2
   title: For Android
   link:
@@ -815,6 +814,14 @@
 
 - sbSecId: 2
   title: Setup Line items For Google Ad Manager
+  link: /prebid-mobile/adops-line-item-setup-dfp.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 3
+  
+- sbSecId: 2
+  title: Setup Line items For Video
   link: /prebid-mobile/adops-line-item-setup-dfp.html
   isHeader: 0
   isSectionHeader: 0
