adding TTD to member page

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -23,6 +23,11 @@
   imgURL: /assets/images/partners/leader/spotx_logo.png
   type: leader
 
+- company: theTradeDesk 
+  link: https://www.thetradedesk.com/
+  imgURL: /assets/images/partners/leader/TTD_logo.png
+  type: leader
+
 - company: Criteo 
   link: https://www.criteo.com/for-publishers/products/criteo-direct-bidder/
   imgURL: /assets/images/partners/tech/criteo.png
