membership page: added shemedia logo

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -83,6 +83,11 @@
   imgURL: /assets/images/partners/publisher/News_Corp_logo.png
   type: publisher
 
+- company: SHE Media
+  link: https://www.shemedia.com/
+  imgURL: /assets/images/partners/publisher/SHE_Media_Logo.png
+  type: publisher
+
 - company: Blockthrough
   link: https://blockthrough.com/
   imgURL: /assets/images/partners/community/Blockthrough-Logo.png
