--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -64,7 +64,7 @@
   type: technology
 
 - company: CafeMedia 
-  link: http://www.cafemedia.com/
+  link: https://www.cafemedia.com/
   imgURL: /assets/images/partners/publisher/cafemedia.png
   type: publisher
 
@@ -73,6 +73,11 @@
   imgURL: /assets/images/partners/publisher/chegg.png
   type: publisher
   
+- company: Insider, Inc. 
+  link: https://www.insider-inc.com/
+  imgURL: /assets/images/partners/publisher/Insider_Inc_logo.png
+  type: publisher
+
 - company: Mediavine
   link: https://www.mediavine.com/
   imgURL: /assets/images/partners/publisher/mediavine-sq-teal-navy-pn-RGB.png
