Added cross player video examples

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1456,6 +1456,47 @@
   subgroup: 1
   
 - sbSecId: 4
+  title: "<span style='color:#EA9622;'>Cross Player</span>"
+  link: 
+  isHeader: 0
+  isSectionHeader: 0
+  isCatHeader: 1
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 4
+  title: '&nbsp;&nbsp;Flowplayer'
+  link: /examples/video/crossplayer/flowplayer/pb-cp-flowplayer.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 4
+  title: '&nbsp;&nbsp;JW Player'
+  link: /examples/video/crossplayer/jwplayer/pb-cp-jwplayer.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 4
+  title: '&nbsp;&nbsp;Kaltura'
+  link: /examples/video/crossplayer/kaltura/pb-cp-kaltura.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 4
+  title: '&nbsp;&nbsp;VideoJS'
+  link: /examples/video/crossplayer/videojs/pb-cp-videojs.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 4
   title: "<span style='color:#EA9622;'>Outstream</span>"
   link: 
   isHeader: 0
