--- a/_data/message.yml
+++ b/_data/message.yml
@@ -1,4 +1,4 @@
 #-------------Message----------------
 - messageId: 1
-  messageText: <a href="/blog/ccpa">Prebid 2.43.0 supports the California Consumer Protection Act</a>
-  messageCreateDt: 12_04_2019
+  messageText: <a href="/prebid/events.html">Prebid Meetup and Leadership Summit in Tokyo on February 20th 2020</a>
+  messageCreateDt: 12_13_2019
