--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -93,6 +93,11 @@
   imgURL: /assets/images/partners/publisher/News_Corp_logo.png
   type: publisher
 
+- company: Publishers Clearing House
+  link: https://pch.com/
+  imgURL: /assets/images/partners/publisher/PCH-logo_v3.jpg
+  type: publisher
+
 - company: SHE Media
   link: https://www.shemedia.com/
   imgURL: /assets/images/partners/publisher/SHE_Media_Logo.png
