--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -118,6 +118,11 @@
   imgURL: /assets/images/partners/community/Dailymotion_logo.png
   type: community
 
+- company: DeepIntent
+  link: https://deepintent.com/
+  imgURL: /assets/images/partners/community/DeepIntent_Logo.png
+  type: community
+
 - company: GoBrowsi
   link: https://gobrowsi.com
   imgURL: /assets/images/partners/community/Browsi-Logo.png
