mediamath link update
hanging when www not provided

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -9,7 +9,7 @@
   type: founder
   
 - company: MediaMath 
-  link: https://mediamath.com/
+  link: https://www.mediamath.com/
   imgURL: /assets/images/partners/leader/MediaMath-wordmark.png
   type: leader
   
