--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -422,6 +422,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 5
+
   
 - sbSecId: 1
   title: Consent Management - GDPR
@@ -463,6 +464,14 @@
   sectionTitle:
   subgroup: 5
 
+- sbSecId: 1
+  title: Size Mapping V2
+  link: /dev-docs/modules/sizeMappingV2.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 5
+  
 - sbSecId: 1
   title: Google Ad Manager Video
   link: /dev-docs/modules/dfp_video.html
