--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -595,6 +595,14 @@
   sectionTitle:
   subgroup: 8
 
+- sbSecId: 1
+  title: Prebid Ad Slot
+  link: /features/pbAdSlot.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 8
+
 
 #--------------Prebid Mobile--------------|
 
