--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -33,6 +33,11 @@
   imgURL: /assets/images/partners/leader/TTD_logo.png
   type: leader
 
+- company: Conversant 
+  link: https://www.conversantmedia.com/
+  imgURL: /assets/images/partners/tech/conversant_logo.png
+  type: technology
+  
 - company: Criteo 
   link: https://www.criteo.com/for-publishers/products/criteo-direct-bidder/
   imgURL: /assets/images/partners/tech/criteo.png
