moving sortable to publisher

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -63,11 +63,6 @@
   imgURL: /assets/images/partners/tech/Pubnative-RGB-Logo.png
   type: technology
 
-- company: Sortable 
-  link: https://www.sortable.com/
-  imgURL: /assets/images/partners/tech/sortable.png
-  type: technology
-
 - company: StreamAMP 
   link: https://streamamp.com/
   imgURL: /assets/images/partners/tech/StreamAMP_logo.png
@@ -116,6 +111,11 @@
 - company: SHE Media
   link: https://www.shemedia.com/
   imgURL: /assets/images/partners/publisher/SHE_Media_Logo.png
+  type: publisher
+
+- company: Sortable 
+  link: https://www.sortable.com/
+  imgURL: /assets/images/partners/publisher/sortable.png
   type: publisher
 
 - company: Blockthrough
