--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -68,6 +68,11 @@
   imgURL: /assets/images/partners/tech/StreamAMP_logo.png
   type: technology
 
+- company: Tapad 
+  link: https://tapad.com/
+  imgURL: /assets/images/partners/tech/tapad_logo.png
+  type: technology
+
 - company: Verizon Media 
   link: https://www.verizonmedia.com/advertising
   imgURL: /assets/images/partners/tech/verizon_logo.png
