changed home page message to london event

--- a/_data/message.yml
+++ b/_data/message.yml
@@ -1,4 +1,4 @@
 #-------------Message----------------
 - messageId: 1
-  messageText: <a href="/prebid/events.html">Prebid Meetup and Leadership Summit in Tokyo on February 20th 2020</a>
-  messageCreateDt: 12_13_2019
+  messageText: <a href="/prebid/events.html">Prebid Meetup and Leadership Summit in London on April 30 2020</a>
+  messageCreateDt: 03_11_2020
