various edits and wordsmithing

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -464,7 +464,7 @@
   subgroup: 5
 
 - sbSecId: 1
-  title: Size Mapping V2
+  title: Advanced Size Mapping
   link: /dev-docs/modules/sizeMappingV2.html
   isHeader: 0
   isSectionHeader: 0
