Module - Docs for  Size Mapping V2 (#1729)
* sizeMappingV2 docs

* change text for describing Labels

* various edits and wordsmithing

* edits

Co-authored-by: bretg <bgorsline@gmail.com>
Co-authored-by: Jean Stemp <jstemp@appnexus.com>

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -464,6 +464,14 @@
   subgroup: 5
 
 - sbSecId: 1
+  title: Advanced Size Mapping
+  link: /dev-docs/modules/sizeMappingV2.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 5
+  
+- sbSecId: 1
   title: Google Ad Manager Video
   link: /dev-docs/modules/dfp_video.html
   isHeader: 0
