--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -737,10 +737,17 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 1
-
 - sbSecId: 2
   title: Video interstitial Ad Unit
   link: /prebid-mobile/pbm-api/ios/pbm-videointerstitialadunit-ios.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 1
+
+- sbSecId: 2
+  title: Video Rewarded Ad Unit
+  link: /prebid-mobile/pbm-api/ios/pbm-video-rewarded-adunit-ios.html
   isHeader: 0
   isSectionHeader: 0
   sectionTitle:
@@ -850,6 +857,15 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
+
+- sbSecId: 2
+  title: Video Rewarded Ad Unit
+  link: /prebid-mobile/pbm-api/android/pbm-video-rewarded-adunit-android.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 2
+
 
 - sbSecId: 2
   title: Targeting Parameters
