--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -432,6 +432,14 @@
   subgroup: 5
 
 - sbSecId: 1
+  title: GDPR Enforcement
+  link: /dev-docs/modules/gdprEnforcement.html
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 5
+
+- sbSecId: 1
   title: Consent Management - US Privacy (CCPA)
   link: /dev-docs/modules/consentManagementUsp.html
   isHeader: 0
