--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -133,6 +133,11 @@
   imgURL: /assets/images/partners/publisher/sortable.png
   type: publisher
 
+- company: AdForm
+  link: https://site.adform.com/
+  imgURL: /assets/images/partners/community/Adform-Logo.png
+  type: community
+
 - company: Adomik
   link: https://adomik.com/
   imgURL: /assets/images/partners/community/Adomik-logo.png
